force-app/main/default/objects/Apttus_Config2__GuidedSearchRuleFilter__c/Apttus_Config2__GuidedSearchRuleFilter__c.object-meta.xml
<CustomObject>
    <description>Represents a single search filter in a guided search rule entry</description>
    <label>Guided Search Rule Filter</label>
    <nameField>
        <displayFormat>FI-{0000000000}</displayFormat>
        <label>Filter Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guided Search Rule Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>