force-app/main/default/objects/Apttus_Config2__GuidedSearchRuleFilter__c/fields/Apttus_Config2__FieldName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FieldName__c</fullName>
    <description>The search field</description>
    <label>Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>