force-app/main/default/objects/Apttus_Config2__GuidedSearchRuleFilter__c/fields/Apttus_Config2__MapTo__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MapTo__c</fullName>
    <description>The type of field comparison value, maps to a Question or a Constant value</description>
    <label>Map To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>